feat: Service integration

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -81,7 +81,7 @@
                 <button nbButton [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 justify-content-start" size="small">
                     <nb-icon icon="phone-call-outline"></nb-icon>{{'kCall' | translate}}</button>
                 <button nbButton (click)="surveydialog()" status="warning" class="mb-2 w-100 justify-content-start" size="small">
-                    <nb-icon icon="clock-outline"></nb-icon>{{'kSchedule' | translate}}</button>
+                    <nb-icon icon="clock-outline"></nb-icon>{{'Survey' | translate}}</button>
             </div>
             <ng-template #templateRef>
                 <div class="p-3">
