--- a/src/app/pages/chat/chat-list/chat-list.component.html
+++ b/src/app/pages/chat/chat-list/chat-list.component.html
@@ -1,7 +1,7 @@
 <div class="row chat-list">
     <div [ngClass]="{'col-md-3': showChat, 'col-md-12': !showChat}">
         <nb-card class="chat-list" size = 'giant' [nbSpinner]="isLoading">
-            <nb-card-header class="border-bottom-0 pb-0">
+            <nb-card-header>
                 <div class="row">
                     <div class="col-6">Chats</div>
                     <div class="col-6">
