--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -1,20 +1,18 @@
-    <nb-card class="card-width" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the list">
+    <nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the list">
         <nb-card-header>
                 <h6 class="float-start">{{'kAssessment' | translate}}</h6>
         </nb-card-header>
-        <nb-card-body>  
-            <nb-list-item>
-                <div>
+        <nb-list-item>
+                <div class="nb-form-field-addon nb-form-field-prefix-medium nb-form-field-addon-success">
                     <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
                 </div>
-                    <input type="search" id='searchText' class="w-100" name="searchText" fullWidth status="success" nbInput [(ngModel)]="searchText" #SearchInput>
-            </nb-list-item>          
-            <nb-list>
-                <nb-list-item *ngFor="let user of users" (click)="send(user)">
+                    <input type="search" id='searchText' class="w-100" name="searchText" fieldSize="medium" class="px-5" fullWidth status="success" nbInput [(ngModel)]="searchText">
+        </nb-list-item>
+            <nb-list class="own-scroll">
+                <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of users" (click)="send(user)">
                     <p>{{user.name}}</p>
                 </nb-list-item>
             </nb-list>
-        </nb-card-body>
         <nb-card-footer>
             <div class="row justify-content-end">
                 <div class="col-2 pe-2">
