fix: send-assessment

--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -18,10 +18,10 @@
                 <div class="col-2 pe-2">
                     <button nbButton status="danger" class="w-100" size="medium"(click)="close()">{{'kCancel' | translate}}</button>
                 </div>
-                <div class="col-2 ps-2">
+                <!-- <div class="col-2 ps-2">
                     <button nbButton status="success" class="w-100" size="medium" [disabled]="!selected"
                     >{{'kSave' | translate}}</button>
-                </div>
+                </div> -->
             </div>
         </nb-card-footer>
     </nb-card>
