fix: Set loader

--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -1,4 +1,4 @@
-    <nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the list">
+    <nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading">
         <nb-card-header>
                 <h6 class="float-start">{{'kAssessment' | translate}}</h6>
         </nb-card-header>
