fix: cursor pointer in patient list.

--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -14,7 +14,7 @@
 
     </div>
     <div>
-        <ngx-datatable class="bootstrap" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true" [columns]="columns" [headerHeight]="headerHeight" [rowHeight]="rowHeight" [loadingIndicator]="isLoading" [scrollbarV]="true" (scroll)="onScroll($event.offsetY)"
+        <ngx-datatable class="bootstrap cursor-pointer" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true" [columns]="columns" [headerHeight]="headerHeight" [rowHeight]="rowHeight" [loadingIndicator]="isLoading" [scrollbarV]="true" (scroll)="onScroll($event.offsetY)"
             style="height: 600px;" (activate)="onActivate($event)">
             <ngx-datatable-column name="Name" headerClass="ps-4" cellClass="ps-4">
                 <ng-template let-value="value" ngx-datatable-cell-template>
