fix:send assessment

--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -1,32 +1,55 @@
-    <nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading">
-        <nb-card-header>
-                <h6 class="float-start">{{'kAssessment' | translate}}</h6>
-        </nb-card-header>
-        <nb-list-item>
-                <div class="nb-form-field-addon nb-form-field-prefix-medium nb-form-field-addon-success">
-                    <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-                </div>
-                    <input type="search" nbInput id='searchText' class="w-100" name="searchText" fieldSize="medium" class="px-5" fullWidth status="success" 
-                    (keyup)="filterProtocolList(searchText)" [(ngModel)]="searchText">             
+<nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading">
+    <nb-card-header>
+        <h6 class="float-start">{{'kAssessment' | translate}}</h6>
+    </nb-card-header>
+    <nb-list-item>
+        <div class="nb-form-field-addon nb-form-field-prefix-medium nb-form-field-addon-success">
+            <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+        </div>
+        <input type="search" nbInput id='searchText' class="w-100" name="searchText" fieldSize="medium" class="px-5"
+            fullWidth status="success" (keyup)="filterProtocolList(searchText)" [(ngModel)]="searchText">
+    </nb-list-item>
+    <div class="text-center py-3" *ngIf="protocolList.length==0">
+        <span>{{'kNoRecordsFound' | translate }}</span>
+    </div>
+    <nb-list class="own-scroll">
+        <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of protocolList"
+            (click)="confirmSelection(user, confirmDialog)">
+            <p>{{user.name}}</p>
         </nb-list-item>
-        <div class="text-center" *ngIf="protocolList.length==0">
-            <span>{{'kNoRecordsFound' | translate }}</span>
-          </div>
-            <nb-list class="own-scroll">
-                <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of protocolList" (click)="send(user)">
-                    <p>{{user.name}}</p>
-                </nb-list-item>
-            </nb-list>
-        <nb-card-footer>
-            <div class="row justify-content-end">
-                <div class="col-2 pe-2">
-                    <button nbButton status="danger" class="w-100" size="medium"(click)="close()">{{'kCancel' | translate}}</button>
-                </div>
-                <!-- <div class="col-2 ps-2">
+    </nb-list>
+    <nb-card-footer>
+        <div class="row justify-content-end">
+            <div class="col-2 pe-2">
+                <button nbButton status="danger" class="w-100" size="medium" (click)="close()">{{'kCancel' |
+                    translate}}</button>
+            </div>
+            <!-- <div class="col-2 ps-2">
                     <button nbButton status="success" class="w-100" size="medium" [disabled]="!selected"
                     >{{'kSave' | translate}}</button>
                 </div> -->
+        </div>
+    </nb-card-footer>
+</nb-card>
+<ng-template #confirmDialog>
+    <nb-card class="dialog-card">
+        <nb-card-header>
+            <h6>Send Assessment </h6>
+        </nb-card-header>
+        <nb-card-body>
+            <p>Are you sure you want to send {{selectedAssessment?.name || 'assessment'}} to the patient?</p>
+        </nb-card-body>
+        <nb-card-footer>
+            <div class="row">
+                <div class="col-md-4 offset-md-4 pe-0">
+                    <button nbButton status="danger" size="medium" class="w-100" (click)="cancel()">{{'kCancel' |
+                        translate}}</button>
+                </div>
+                <div class="col-md-4">
+                    <button nbButton status="success" class="w-100" size="medium" (click)="send()">{{'kSend' |
+                        translate}}</button>
+                </div>
             </div>
         </nb-card-footer>
     </nb-card>
-
+</ng-template>
