--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -48,10 +48,23 @@
                 </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Action" [maxWidth]="200" headerClass="text-center" cellClass="text-center">
-                <ng-template let-value="value" ngx-datatable-cell-template>
-                    <button nbButton outline status="danger" size="tiny">Unenroll</button>
+                <ng-template let-value=" value " let-row="row" let ngx-datatable-cell-template>
+                    <button nbButton outline status="danger" size="tiny" [disabled]="row.monitored == 0" (click)="$event.stopPropagation(); openDialog(UnenrollDialog, row)">Unenroll</button>
                 </ng-template>
             </ngx-datatable-column>
         </ngx-datatable>
     </div>
 </div>
+<ng-template #UnenrollDialog>
+    <nb-card class="dialog-card">
+        <nb-card-header>
+            <p class="subtitle">Are you sure want to Unenroll ?</p>
+        </nb-card-header>
+        <nb-card-body>
+            <div class="float-end">
+                <button nbButton status="success" size="small" (click)="Unenroll()">{{'kYes' | translate}}</button>
+                <button nbButton status="danger" class="ms-2" size="small" (click)="close()">{{'kNo' | translate}}</button>
+            </div>
+        </nb-card-body>
+    </nb-card>
+</ng-template>
