--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -6,22 +6,20 @@
         <div class="nb-form-field-addon nb-form-field-prefix-medium nb-form-field-addon-success">
             <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
         </div>
-        <input type="search" nbInput id='searchText' class="w-100" name="searchText" fieldSize="medium" class="px-5"
-            fullWidth status="success" (keyup)="filterProtocolList(searchText)" [(ngModel)]="searchText">
+        <input type="search" nbInput id='searchText' class="w-100" name="searchText" fieldSize="medium" class="px-5" fullWidth status="success" (keyup)="filterProtocolList(searchText)" [(ngModel)]="searchText">
     </nb-list-item>
     <div class="text-center py-3" *ngIf="protocolList.length==0">
         <span>{{'kNoRecordsFound' | translate }}</span>
     </div>
     <nb-list class="own-scroll">
-        <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of protocolList"
-            (click)="confirmSelection(user, confirmDialog)">
+        <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of protocolList" (click)="confirmSelection(user, confirmDialog)">
             <p>{{user.name}}</p>
         </nb-list-item>
     </nb-list>
     <nb-card-footer>
         <div class="row justify-content-end">
             <div class="col-2 pe-2">
-                <button nbButton status="danger" class="w-100" size="medium" (click)="close()">{{'kCancel' |
+                <button nbButton status="danger" class="w-100" size="medium" (click)="close()">{{'kClose' |
                     translate}}</button>
             </div>
             <!-- <div class="col-2 ps-2">
