--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -9,6 +9,9 @@
       </span>
       <span class="ms-auto"></span>
       <span>
+        <button nbTooltip="Notification" nbButton ghost status="primary" (click)="notifications()"><nb-icon icon="bell-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
+      </span>
+      <span>
         <button nbTooltip="Change to Dark" nbTooltipPlacement="start" (click)="toggleTheme('default')" *ngIf="theme === 'default'; else dark" nbButton ghost status="primary"><nb-icon icon="sun-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
       </span>
       <span class="ps-2">
