--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -8,8 +8,12 @@
         <img [src]="logo" alt="" height="40">
       </span>
       <span class="ms-auto"></span>
-      <span>
+      <span *ngIf="!notificationAlert">
         <button nbTooltip="Notification" nbButton ghost status="primary" (click)="notifications()"><nb-icon icon="bell-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
+      </span>
+      <span *ngIf="notificationAlert">
+        <button nbTooltip="Notification" nbButton ghost status="primary" (click)="notifications()"><nb-icon icon="bell-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
+        <nb-badge class="badge-position cursor-pointer" style="right:12%;" text="99+" status="danger" dotMode = true ></nb-badge>
       </span>
       <span>
         <button nbTooltip="Change to Dark" nbTooltipPlacement="start" (click)="toggleTheme('default')" *ngIf="theme === 'default'; else dark" nbButton ghost status="primary"><nb-icon icon="sun-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
