--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -1,1 +1,19 @@
-<p>actions works!</p>
+<nb-card>
+    <nb-card-body>
+        <nb-actions size="medium" class="justify-content-center">
+            <nb-action icon="monitor-outline" nbTooltip="Share-desktop" nbTooltipPlacement="top"></nb-action>
+            <nb-action >
+                <nb-icon icon="language" nbTooltip="Translator" nbTooltipPlacement="top" pack="font-awesome">
+                </nb-icon>
+            </nb-action >
+            <nb-action icon="volume-off-outline"  nbTooltip="Mute" nbTooltipPlacement="top" ></nb-action>
+            <nb-action icon="video-outline" nbTooltip="Video" nbTooltipPlacement="top"  ></nb-action>
+            <nb-action > 
+                <button nbButton status="success" class="w-100" size="small">Invite</button>
+            </nb-action>
+            <nb-action >
+                <button nbButton status="danger" class="w-100" size="small">Leave</button>
+            </nb-action>
+          </nb-actions>
+    </nb-card-body>
+</nb-card>
