--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -100,7 +100,7 @@
                         <nb-icon icon="headphones-outline"></nb-icon>{{'kAudio' | translate}}
                     </button>
                     <button nbButton status="success" class="m-1" size="small" (click)="callBridge()">
-                        <nb-icon icon="phone-call-outline"></nb-icon>{{'kCAllBridge' | translate}}
+                        <nb-icon icon="phone-call-outline"></nb-icon><a routerLink="../../meet"> {{'kCAllBridge' | translate}}</a>
                     </button>
                 </div>
             </ng-template>
