--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -47,8 +47,8 @@
                         nbTooltip="Video" nbTooltipStatus="basic"></i>
                 </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Action" [maxWidth]="200" headerClass="text-center" cellClass="text-center">
-                <ng-template let-value="value" let-row="row" let ngx-datatable-cell-template>
+            <ngx-datatable-column name="Action" [maxWidth]="200" headerClass="text-center" cellClass="text-center" prop="monitored">
+                <ng-template let-value="value" let-row="row" ngx-datatable-cell-template>
                     <button nbButton outline status="danger" size="tiny" *ngIf="row.monitored == 1" (click)="$event.stopPropagation(); openDialog(unEnrollDialog, row,'unenroll')">Unenroll</button>
                     <button nbButton outline status="warning" size="tiny" *ngIf="row.monitored == 0" (click)="$event.stopPropagation();openDialog(enrollDialog,row,'enroll')">enroll</button>
                 </ng-template>
